FIX: Minor style issues discovered on meta
- Declare position:static for .show-more.has-topics to avoid overlap with
  topic list
- Remove padding, background from topic unread and new post notifications
  and set color to $highlight and $tertiary
- Reposition topic avatar flair on desktop at top 35px, right 0
- Set about_url, theme_version in about.json
- Add short theme description and learn more link to README

--- a/common/common.scss
+++ b/common/common.scss
@@ -708,6 +708,10 @@ aside.quote .title {
 	100% { background-color: rgba(33,36,36,1); }
 }
 
+.show-more.has-topics {
+  position: static;
+}
+
 .topic-list {
   display: -webkit-box;
   display: -webkit-flex;
@@ -1019,6 +1023,19 @@ aside.onebox {
       width: 4px;
       height: 8px;
     }
+  }
+}
+
+.badge-notification {
+  padding: 0;
+  &.new-posts, &.unread {
+    background-color: transparent;
+  }
+  &.new-posts {
+    color: $tertiary;
+  }
+  &.unread {
+    color: $highlight;
   }
 }
 
